--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ font-family:Verdana;
     width: 300px;
     padding: 20px;
     border-radius: 25px;
-    align: center
+    position: absolute;
+        top:50%;
+        left:50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
 }
 
