--- a/style.css
+++ b/style.css
@@ -10,10 +10,6 @@ font-family:Verdana;
     width: 300px;
     padding: 20px;
     border-radius: 25px;
-    position: absolute;
-        top:50%;
-        left:50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
+    margin: auto;
 }
 
